--- a/style.css
+++ b/style.css
@@ -42,14 +42,16 @@ small {
 }
 
 .loveMe .fa-heart {
-    position: absolute;
-    animation: grow 0.6s linear;
-    transform: translate(-50%, -50%) scale(0);
+  position: absolute;
+  animation: grow 0.6s linear;
+  /* position icon in center by moving -50%, starts at 0 scale*/
+  transform: translate(-50%, -50%) scale(0);
 }
 
 @keyframes grow {
-    to {
-        transform: translate(-50%, -50%) scale(10);
-        opacity: 0;
-    }
+  to {
+    /* icon increases size by 10 and becomes transparent */
+    transform: translate(-50%, -50%) scale(10);
+    opacity: 0;
+  }
 }
